--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Afripulse Group, digital marketing, social media marketing, search engine optimization, web design">
     <meta name="author" content="Afripulse Group">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="logo.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
